be/microservices/k8s/friendship-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friendship-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friendshipservice
  template:
    metadata:
      labels:
        app: friendshipservice
    spec:
      containers:
        - name: friendshipservice
          image: friendshipservice
          imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: friendship-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: friendshipservice
  ports:
    - name: friendshipservice
      protocol: TCP
      port: 80
      targetPort: 80
