be/microservices/k8s/group-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: group-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: groupservice
  template:
    metadata:
      labels:
        app: groupservice
    spec:
      containers:
        - name: groupservice
          image: amiqservicesgroup
          imagePullPolicy: Never
          resources:
            requests:
              cpu: "300m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: group-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: groupservice
  ports:
    - name: groupservice
      protocol: TCP
      port: 80
      targetPort: 80
