be/microservices/k8s/amiq-ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amiq-ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: amiq.com
      http:
        paths:
          - path: /group/(.*)
            pathType: Prefix
            backend:
              service:
                name: group-clusterip-srv
                port:
                  number: 80
          - path: /user/(.*)
            pathType: Prefix
            backend:
              service:
                name: user-clusterip-srv
                port:
                  number: 80
